--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 
 <body>
-
+    <h1>Fibonacci Numbers Using JavaScript</h1>
+    Enter the count of terms: <input id="inCount" />
+    <button id="btnGen" onclick="on_btn_gen_click()">Generate</button>
+    <p id="pSeries" />
 </body>
 
 </html>
